--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-box">
         <div class="login-header">
-            <header>Login</header>
+            <header>Login:</header>
         </div>
         <div class="input-box">
             <input type="text" class="input-field" placeholder="Email" autocomplete="off" required>
