--- a/index.html
+++ b/index.html
@@ -3,36 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login transparente</title>
     <link rel="stylesheet" href="style.css">
-    <title>Login</title>
 </head>
 <body>
-    <div class="login-box">
-        <div class="login-header">
-            <header>Login:</header>
+    <section>
+        <div class="form-box">
+            <div class="form-value">
+                <form action="">
+                    <h2>Login</h2>
+                    <div class="input-box">
+                        <ion-icon name="mail"></ion-icon>
+                        <input type="text" required>
+                        <label for="">Email</label>
+                    </div>
+                    <div class="input-box">
+                        <ion-icon name="eye-off"></ion-icon>
+                        <input type="password" required>
+                        <label for="">Password</label>
+                    </div>
+                    <div class="forget">
+                        <label for="">
+                            <input type="checkbox"> Remember Me 
+                            <a href="#">Forget Password</a>
+                        </label>
+                    </div>
+
+                    <button>Login</button>
+                    <div class="register">
+                        <label for="">
+                            Don't have any account
+                            <a href="#">Regester</a>
+                        </label>
+                    </div>
+                </form>
+            </div>
         </div>
-        <div class="input-box">
-            <input type="text" class="input-field" placeholder="Email" autocomplete="off" required>
-        </div>
-        <div class="input-box">
-            <input type="password" class="input-field" placeholder="password" autocomplete="off" required>
-        </div>
-        <div class="forgot">
-            <section>
-                <input type="checkbox" id="check">
-                <label for="check">Remember me</label>
-            </section>
-            <section>
-                <a href="a">Forgot password</a>
-            </section>
-        </div>
-        <div class="input-submit">
-            <button class="submit-btn" id="submit"></button>
-            <label for="submit">Sign In</label>
-        </div>
-        <div class="sign-up-link">
-            <p>Don´t have account? <a href="#">Sign Up</a></p>
-        </div>
-    </div>
+    </section>
+    <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
